# todo-htmx

./: .env  .gitignore  Cargo.toml  Makefile  README.md  bun.lockb  docker-compose.yml  package.json  playwright.config.ts
.github/workflows/: playwright.yml  tests.yml
.sqlx/: query-0fb2317687b66119cc2256a718fc0d38ecf5ac533a7f1fa873adcf1983bc9d73.json  query-8241e9cb80bbf22fb2336edb488af9e3e5612d207384cc79717750dcc22a0b13.json  query-87be1c8cb98bc11221c2cc97c164188b8f3f5632f12b94a40fed0dd2be3bdb25.json  query-bd66eeadc9fe98bad37a98c6ba9eac3a524e05b11da14648cc5b3f0b76d5b64f.json  query-d8535ba398817d617e43b95c160d6a4e327dbea8c6ecad51b73efeb422260ce8.json
e2e/tests/: todo.spec.ts
end2end/tests/: todo.spec.ts
migrations/: 20240205171415_create-todo-table.sql  20240205173002_todo-add-creation-date.sql
src/: app.rs  errorresponse.rs  fileserv.rs  helper.rs  lib.rs  main.rs  state.rs
