[package]
name = "todo-htmx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo-htmx"
test = false
bench = false

[dependencies]
axum = { version = "0.7" }
leptos = { version = "0.6", features = ["ssr"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = { version = "0.4"}
tower-http = { version = "0.5", features = ["fs"] }
http = "1"
color-eyre = "0.6"
serde = "1.0.196"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
dotenvy = "0.15.7"
chrono = "0.4.33"
http-body-util = "0.1.1"
tracing = "0.1.40"
